Bug 636465 - Reset the spellchecking override status when detaching an editor object from the content node; r,a=roc